--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"dotenv": "^16.0.3",
 		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-beautiful-dnd": "^13.1.1",
